--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h3 class="mb-0">Korea university </h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Computer Science</div>
-            <p>GPA: 3.29</p>
+            <p>GPA: 3.38</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2015 - July 2019</span>
@@ -218,8 +218,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Hard worker, 일하고 공부하고 남는 시간에 맛집 가기 ,걷기와 산책 등산, 아웃도어, 수영 등을 합니다.
-          복싱, UFC, NBA등을 즐겨봅니다. 시간이 많을 때는 신기술 공부하는 것을 즐깁니다.
+        <p>Hard worker, 일하고 공부하고 남는 시간에 걷기와 산책 등산 등을 합니다.
+          복싱, UFC, NBA등을 즐겨봅니다. 
         </p>
 
       </div>
@@ -261,6 +261,45 @@
         </ul>
       </div>
     </section>
+
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+      <div class="w-100">
+        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Toeic 935 </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Toeic speaking 7</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            certificat of  network programming with java summer camp 2015</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            2<sup>st</sup>
+            Computer graphics 2016 first semester
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            A<sup>nd</sup>
+            System Programming 2015 second semester</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            A<sup>nd</sup>
+            Natural language processing 2015 second semester </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            A<sup>rd</sup>
+            Embedded computing 2015 first semester</li>
+        </ul>
+      </div>
+    </section>
+
 
   </div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
