--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Toeic 935 </li>
+            <i></i>
+           	Spring framework, mybatis, oracle, bootstrap, Apache tomcat, HTML, CSS, JS, JSON, AJAX를 이용한 쇼핑몰 세미 프로젝트  </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Toeic speaking 7</li>
