--- a/index.html
+++ b/index.html
@@ -265,20 +265,19 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5"> 프로젝트 경험 </h2>
         <ul class="fa-ul mb-0">
           <li>
             <i></i>
            	Spring framework, mybatis, oracle, bootstrap, Apache tomcat, HTML, CSS, JS, JSON, AJAX를 이용한 쇼핑몰 세미 프로젝트  </li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Toeic speaking 7</li>
+            <i></i>
+            python , flask, telegram을 이용한 챗봇 </li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            certificat of  network programming with java summer camp 2015</li>
+            <i></i>
+            </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>st</sup>
@@ -334,6 +333,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#experience">Awards</a>
             </li>
           </ul>
         </div>
