--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="subheading mb-5">010-2799-4207
           <a href="mailto:name@email.com">wkdanlwo091@gmail.com</a>
         </div>
-        <p class="lead mb-5">Mobile, Web front-end, backend wannabe software engineer</p>
+        <p class="lead mb-5">클라우드, IoT, 빅데이터, 프런트앤드, 백엔드에 관심 있는 예비 개발자입니다. </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -59,7 +59,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Korea university </h3>
+            <h3 class="mb-0">고려대학교 </h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Computer Science</div>
             <p>GPA: 3.38</p>
@@ -71,8 +71,8 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Military Service</h3>
-            <div class="subheading mb-3">Korea Combat Police</div>
+            <h3 class="mb-0">군대</h3>
+            <div class="subheading mb-3">의무경찰</div>
             <p></p>
           </div>
           <div class="resume-date text-md-right">
@@ -83,8 +83,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Sangmyung University</h3>
-            <div class="subheading mb-3">Computer Science</div>
+            <h3 class="mb-0">상명대학교</h3>
+            <div class="subheading mb-3">컴퓨터과학과</div>
             <p>GPA: 4.00</p>
           </div>
           <div class="resume-date text-md-right">
